# Artemis6

./: .gitignore  requirements.txt
.github/workflows/: deploy.yml
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/four_wheel_robot/lib/four_wheel_robot/: ros2_bridge
install/four_wheel_robot/share/four_wheel_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/four_wheel_robot/share/four_wheel_robot/controllers/four_wheel_controller/: four_wheel_controller  four_wheel_controller.py
install/four_wheel_robot/share/four_wheel_robot/launch/: robot_bringup.launch.py
install/four_wheel_robot/share/four_wheel_robot/worlds/: .four_wheel_robot.wbproj  four_wheel_robot.wbt
install/robot/lib/robot/: base_controller  joint_state_publisher  pose_controller  ros2_bridge
install/robot/share/ament_index/resource_index/package_run_dependencies/: robot
install/robot/share/ament_index/resource_index/parent_prefix_path/: robot
install/robot/share/robot/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/robot/share/robot/config/: arm_poses.yaml
install/robot/share/robot/controllers/robot_controller/: robot_controller
install/robot/share/robot/protos/: MobileManipulator.proto  robot.proto
install/robot/share/robot/worlds/: .robot.wbproj  robot.wbt  world.wbt
log/: latest_build
src/robot/: CMakeLists.txt  README.md  package.xml
src/robot/controllers/robot_controller/: robot_controller.py
src/robot/example_projects/proximity_alert_demo/arduino/: platformio.ini
src/robot/example_projects/proximity_alert_demo/arduino/src/: main.cpp
src/robot/example_projects/proximity_alert_demo/ros_nodes/: led_status.py  lidar_monitor.py
src/robot/example_projects/proximity_alert_demo/schematics/Untitled/: Untitled.kicad_pro  Untitled.kicad_sch  fp-info-cache
src/robot/launch/: robot_bringup.launch.py  start_teleop.sh
src/robot/protos/: MobileManipulator.proto
src/robot/ros_nodes/: arm_controller.py  arm_teleop.py  base_controller.py  ik_solver.py  keyboard_control.py  pick_place_demo.py  pin_tester.py  square_drive.py  test_ik.py
src/robot/scripts/: import_urdf.sh  pick_and_place_demo.py  rgb_light.py
src/robot/scripts/radar_project/: check_pin_mapping.py  find_working_pins.py  lidar_monitor.py
src/robot/urdf/: robot.urdf
src/robot/worlds/: .mobile_manipulator.wbproj  .world.wbproj  mobile_manipulator.wbt
